fix overflow problem

--- a/frontend/src/components/selectedRepository/SelectedRepository.scss
+++ b/frontend/src/components/selectedRepository/SelectedRepository.scss
@@ -8,4 +8,13 @@
         //     }
         // }
     }
+    #selectedRepoRight{
+        width: 100%;
+        overflow: auto;
+        #branchPanel{
+            max-width: 100%;
+            overflow: auto;
+        }
+    }
+    
 }
